--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -1,17 +1,18 @@
 
 <div class="row" ng-hide="informacoes">
     <!-- Cabeçalho da Janela -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="row" style="background-color: gray">
+    <div class="row" id="cabPag">
+        <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
             <h1 style="text-align: center">Leilões Abertos</h1>
         </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <form style="padding-top: 10px;">
             <div class="form-inline">
                 <input type="text" class="form-control" ng-model="pesquisa" />
                 <a class="btn btn-default" href="#/leilao-novo" role="button"><span class="glyphicon glyphicon-pencil"></span> Novo...</a>
             </div>
         </form>		
-        <hr>		
     </div>
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -40,18 +41,25 @@
 </div>
 
 <div class="row" ng-show="informacoes">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="row" style="background-color: gray">
-            <h1 style="text-align: center">Informações do Leilão</h1>
+    <div class="row" id="cabPag">
+        <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+            <h1 style="text-align: center">Leilões Abertos</h1>
         </div>
+    </div>
+
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <form role="form" style="padding-top: 10px;">
             <div class="form-group">
-                <label for="categoria">
-                    Categoria
-                </label>
-                <select ng-model="leilao.categoria" class="form-control" id="categoria" disabled>
-                    <option ng-repeat="cat in opCategorias" ng-selected="leilao.categoria == cat.value" value="{{cat.value}}">{{cat.text}}</option>
-                </select>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="categoria">
+                            Categoria
+                        </label>
+                        <select ng-model="leilao.categoria" class="form-control" id="categoria" disabled>
+                            <option ng-repeat="cat in opCategorias" ng-selected="leilao.categoria == cat.value" value="{{cat.value}}">{{cat.text}}</option>
+                        </select>
+                    </div>
+                </div>
             </div>
 
 
@@ -97,10 +105,14 @@
             </div>
 
             <div class="form-group">
-                <label for="descricao">
-                    Descrição do Serviço
-                </label>
-                <textarea ng-model="leilao.descricao" class="form-control" rows="5" id="descServ" readonly="true"></textarea>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="descricao">
+                            Descrição do Serviço
+                        </label>
+                        <textarea ng-model="leilao.descricao" class="form-control" rows="5" id="descServ" readonly="true"></textarea>
+                    </div>
+                </div>
             </div>
 
             <!--
@@ -121,7 +133,7 @@
                 </div>
             </div>
             -->
-            
+
             <div class="form-group">
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -175,11 +187,15 @@
                 </div>
             </div>-->
 
-        </div>
-    </div>
+                </div>
+            </div>
         </form>
-        <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-        <!--<button type="button" class="btn btn-success"><span class="glyphicon glyphicon-bitcoin"></span> Dar um lance</button>-->
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
+                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-bitcoin"></span> Dar um lance</button>
+            </div>
+        </div>
         <!-- ng-click="salvarEdicao()" -->
     </div>
 </div>
