--- a/client/views/leilao-novo.html
+++ b/client/views/leilao-novo.html
@@ -1,6 +1,6 @@
 
 <!-- Cabeçalho da Janela -->
-<div class="row" style="background-color: gray">
+<div class="row" id="cabPag">
     <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
         <h1 style="text-align: center">Novo Leilão</h1>
     </div>
@@ -11,13 +11,16 @@
         <!-- Formulário -->
         <form role="form" method="POST">
             <div class="form-group">
-                <label for="categoria">
-                    Categoria
-                </label>
-                <!--<input type="text" ng-model="leilao.categoria" class="form-control" id="categoria" placeholder="Ex.: Marcenária"/>-->
-                <select ng-model="leilao.categoria" class="form-control" id="categoria">
-                    <option ng-repeat="cat in opCategorias" value="{{cat.value}}">{{cat.text}}</option>
-                </select>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="categoria">
+                            Categoria
+                        </label>
+                        <select ng-model="leilao.categoria" class="form-control" id="categoria">
+                            <option ng-repeat="cat in opCategorias" value="{{cat.value}}">{{cat.text}}</option>
+                        </select>
+                    </div>
+                </div>
             </div>
 
             <div class="form-group">
@@ -38,11 +41,11 @@
                         <label for="data_exec">
                             Data da Execução
                         </label>
-                 
+
                         <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" id="data_exec" placeholder="Ex.: XX/XX/XXXX"/>  
-                      
-                        
-                 
+
+
+
 
                     </div>
                     <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
@@ -67,10 +70,14 @@
             </div>
 
             <div class="form-group">
-                <label for="descricao">
-                    Descrição do Serviço
-                </label>
-                <textarea ng-model="leilao.descricao" class="form-control" rows="5" id="descServ" placeholder="Informe aqui a descrição do seu serviço"></textarea>
+                <div class="row">
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="descricao">
+                            Descrição do Serviço
+                        </label>
+                        <textarea ng-model="leilao.descricao" class="form-control" rows="5" id="descServ" placeholder="Informe aqui a descrição do seu serviço"></textarea>
+                    </div>
+                </div>
             </div>
 
             <!--
@@ -91,7 +98,7 @@
                 </div>
             </div>
             -->
-            
+
             <div class="form-group">
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -121,7 +128,7 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="form-group">
                 <div class="row">
                     <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -145,20 +152,20 @@
                 </div>
             </div>-->
 
-        </div>
-    </div>
-        <!-- Botões -->
-        <div class="form-group">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <button type="button" ng-click="cadastrar(leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span>Salvar</button>
-                    <a class="btn btn-danger" href="#/leiloes-abertos" role="button"><span class="glyphicon glyphicon-menu-left"></span>Cancelar</a>
                 </div>
             </div>
-        </div>
+            <!-- Botões -->
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <button type="button" ng-click="cadastrar(leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span>Salvar</button>
+                        <a class="btn btn-danger" href="#/leiloes-abertos" role="button"><span class="glyphicon glyphicon-menu-left"></span>Cancelar</a>
+                    </div>
+                </div>
+            </div>
 
-</form>
+        </form>
 
 
-</div>
+    </div>
 </div>
