--- a/client/views/leiloes-meusLances.html
+++ b/client/views/leiloes-meusLances.html
@@ -1,15 +1,18 @@
 <div class="row" ng-hide="informacoes">
     <!-- Cabeçalho da Janela -->
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="row" style="background-color: gray">
-            <h1 style="text-align: center">Meus lances</h1>
+
+    <div class="row" id="cabPag">
+        <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+            <h1 style="text-align: center">Meus Lances</h1>
         </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <form style="padding-top: 10px;">
             <div class="form-inline">
                 <!--<input type="text" class="form-control" ng-model="pesquisa" />
                 <a class="btn btn-default" href="#/leilao-novo" role="button"><span class="glyphicon glyphicon-pencil"></span> Novo...</a>
-           -->
-                </div>
+                -->
+            </div>
         </form>		
         <hr>		
     </div>
@@ -24,18 +27,18 @@
                     <th>Tempo</th>
                     <th>Status</th>
                     <th>Ação</th>
-                    
+
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="(key, value) in lista | filter: pesquisa">
                     <td>{{value.categoria}}</td>
                     <td>{{value.descricao}}</td>
-                   <!--<td>{{value.tempoCorrente}}</td>-->
-                  
-                   <td>{{value.status}}</td>
-                   
-                   
+                    <!--<td>{{value.tempoCorrente}}</td>-->
+
+                    <td>{{value.status}}</td>
+
+
                     <th>
                         <button type="button" ng-click="info(value)" class="btn btn-sm btn-primary" alt="Editar" title="Editar">
                             <span class="glyphicon glyphicon-plus-sign"></span> Informações
@@ -48,10 +51,12 @@
 </div>
 
 <div class="row" ng-show="informacoes">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="row" style="background-color: gray">
-            <h1 style="text-align: center">Informações do Leilão</h1>
+    <div class="row" id="cabPag">
+        <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+            <h1 style="text-align: center">Meus Lances</h1>
         </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <form role="form" style="padding-top: 10px;">
             <div class="form-group">
                 <label for="categoria">
@@ -127,7 +132,7 @@
                 </div>
             </div>
             -->
-            
+
             <div class="form-group">
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -181,8 +186,8 @@
                 </div>
             </div>-->
 
-        </div>
-    </div>
+                </div>
+            </div>
 
         </form>
         <button type="button" ng-click="cancelarLance()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
