--- a/client/views/perfil.html
+++ b/client/views/perfil.html
@@ -6,13 +6,13 @@
 </div>
 
 <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;">
-    <div class="row">
-        <form role="form" method="POST">
+    <div class="row" ng-init="buscar()">
+        <form role="form" method="POST" >
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <label for="pessoa">
-                            Fisico / Júridico <br>
+                            Pessoa <br>
                         </label>
                         <div>
                             <input type="radio" name="op" id="op1" onclick="location.href = '#/perfil'"> Física 
@@ -23,64 +23,81 @@
                         <label for="nome">
                             Nome
                         </label>
-                        <input  type="text"  ng-model="perfil_pessoa.nome" class="form-control" id="pessoa_nome" />
+                        <input  type="text"  ng-model="lista.nome" class="form-control" id="pessoa_nome" />
                     </div>
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="row">
+                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="username">
                             Username
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.username" class="form-control" id="username"/>
+                        <input type="text" ng-model="lista.username" class="form-control" id="username"/>
                     </div>
+                    
+                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                        <label for="senha">
+                            Senha
+                        </label>
+                        <input type="password" ng-model="lista.senha" class="form-control" id="senha"/>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                        <label for="email">
+                            email
+                        </label>
+                        <input type="text" ng-model="lista.email" class="form-control" id="email"/>
+                    </div>
+                </div>
+                <div class="row">
+                    
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="cpf">
                             CPF
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.cpf" class="form-control" id="cpf"/>
+                        <input type="text" ng-model="lista.cpf" class="form-control" id="cpf"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="nascimento">
                             Data de Nascimento
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.nascimento" class="form-control" id="nascimento"/>
+                        <input type="text" ng-model="lista.DataNascimento" class="form-control" id="nascimento"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="telefone">
                             Telefone
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.telefone" class="form-control" id="telefone"/>
+                        <input type="text" ng-model="lista.telefones" class="form-control" id="telefone"/>
                     </div>
                 </div>
             </div>
+            <!---
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="endreco">
+                        <label for="endereco">
                             Endereço
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.endereco" class="form-control" id="endereco"/>
+                        <input type="text" ng-model="" class="form-control" id="endereco"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="numero">
                             Número
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.numero" class="form-control" id="numero"/>
+                        <input type="text" ng-model="" class="form-control" id="numero"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="complemento">
                             Complemento
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.complemento" class="form-control" id="complemento"/>
+                        <input type="text" ng-model="" class="form-control" id="complemento"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="cep">
                             CEP
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.cep" class="form-control" id="cep"/>
+                        <input type="text" ng-model="" class="form-control" id="cep"/>
                     </div>
                 </div>
             </div>
@@ -91,25 +108,25 @@
                         <label for="bairro">
                             Bairro
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.bairro" class="form-control" id="bairro" />
+                        <input type="text" ng-model="" class="form-control" id="bairro" />
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="cidade">
                             Cidade
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.cidade" class="form-control" id="cidade" />
+                        <input type="text" ng-model="" class="form-control" id="cidade" />
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="estado">
                             Estado
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.estado" class="form-control" id="estado" />
+                        <input type="text" ng-model="" class="form-control" id="estado" />
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="referencia">
                             Ponto de Referência
                         </label>
-                        <input type="text" ng-model="perfil_pessoa.referencia" class="form-control" id="referencia" />
+                        <input type="text" ng-model="" class="form-control" id="referencia" />
                     </div>
                 </div>
             </div>
@@ -120,18 +137,19 @@
                         <label for="infoadi">
                             Informções Adcionais
                         </label>
-                        <textarea ng-model="perfil_pessoa.infoadi" class="form-control" rows="5" id="infoadi"></textarea>
+                        <textarea ng-model="" class="form-control" rows="5" id="infoadi"></textarea>
                     </div>
                 </div>
             </div>
+            -->
         </form>
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <button type="button" ng-click="excluir(value.id)" class="btn btn-sm btn-danger" alt="Excluir" title="Excluir">
+                <button type="button" ng-click="excluir(lista)" class="btn btn-sm btn-danger" alt="Excluir" title="Excluir">
                     <span class="glyphicon glyphicon-remove"></span> Excluir
                 </button>
-                <button type="button" ng-click="editar(value)" class="btn btn-sm btn-default" alt="Editar" title="Editar">
+                <button type="button" ng-click="editar(lista)" class="btn btn-sm btn-default" alt="Editar" title="Editar">
                     <span class="glyphicon glyphicon-edit"></span> Editar
                 </button>
             </div>
