--- a/client/views/meus-lances.html
+++ b/client/views/meus-lances.html
@@ -1,18 +1,10 @@
-
 <div class="row" ng-hide="informacoes">
+
     <!-- Cabeçalho da Janela -->
     <div class="row" id="cabPag">
         <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-            <h1 style="text-align: center">Leilões Abertos</h1>
+            <h1 style="text-align: center">Meus Lances</h1>
         </div>
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <form style="padding-top: 10px;">
-            <div class="form-inline">
-                <input type="text" class="form-control" ng-model="pesquisa" />
-                <a class="btn btn-default" href="#/leilao-novo" role="button"><span class="glyphicon glyphicon-pencil"></span> Novo...</a>
-            </div>
-        </form>		
     </div>
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -20,18 +12,21 @@
         <table class="table table-striped table-hover" ng-init="listar()">
             <thead>
                 <tr>
-                    <th>Categoria</th>
-                    <th>Descrição</th>
-                    <th>Ação</th>
+                    <th>Leilão Descrição</th>
+                    <th>Valor</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="(key, value) in lista | filter: pesquisa">
-                    <td>{{opCategorias.find(value.categoria).text}}</td>
-                    <td>{{value.descricao}}</td>
+                    <td>{{value.leilao.descricao}}</td>
+                    <td>{{value.valor}}</td>
                     <th>
-                        <button type="button" ng-click="setInfo(value)" class="btn btn-sm btn-primary" alt="Editar" title="Editar">
-                            <span class="glyphicon glyphicon-plus-sign"></span> MAIS
+                        <button type="button" ng-click="setInfo(value)" class="btn btn-sm btn-primary" alt="Informações" title="Informações">
+                            <span class="glyphicon glyphicon-plus-sign"></span> INFO LEILÃO
+                        </button>
+                        <button type="button" ng-click="deletar(value, lista)" class="btn btn-sm btn-danger" alt="Excluir Lance" title="Excluir Lance">
+                            <span class="glyphicon glyphicon-erase"></span> EXCLUIR
                         </button>
                     </th>
                 </tr>
@@ -40,10 +35,15 @@
     </div>
 </div>
 
+
+
+
+
+
 <div class="row" ng-show="informacoes">
     <div class="row" id="cabPag">
         <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-            <h1 style="text-align: center">Leilões Abertos</h1>
+            <h1 style="text-align: center">Leilão do Lance</h1>
         </div>
     </div>
 
@@ -51,25 +51,11 @@
         <form role="form" style="padding-top: 10px;">
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <label for="categoria">
-                            Categoria
-                        </label>
-                        <select ng-model="leilao.categoria" class="form-control" id="categoria" disabled>
-                            <option ng-repeat="cat in opCategorias" ng-selected="leilao.categoria == cat.value" value="{{cat.value}}">{{cat.text}}</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="data_exec">
                             Data de Inicio
                         </label>
-                        <input type="text" ng-model="leilao.dataHoraInicio" class="form-control" id="data_exec" readonly="true"/>                        
+                        <input type="text" ng-model="lance.leilao.dataHoraInicio" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
                     <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="hora_exec">
@@ -81,7 +67,7 @@
                         <label for="data_exec">
                             Data da Execução
                         </label>
-                        <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" id="data_exec" readonly="true"/>                        
+                        <input type="text" ng-model="lance.leilao.dataHoraExecucao" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
                     <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="hora_exec">
@@ -93,7 +79,7 @@
                         <label for="data_limite">
                             Data Limite dos Lances
                         </label>
-                        <input type="text" ng-model="leilao.dataHoraFinal" class="form-control" id="data_limite" readonly="true"/>                        
+                        <input type="text" ng-model="lance.leilao.dataHoraFinal" class="form-control" id="data_limite" readonly="true"/>                        
                     </div>
                     <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="hora_limite">
@@ -110,7 +96,7 @@
                         <label for="descricao">
                             Descrição do Serviço
                         </label>
-                        <textarea ng-model="leilao.descricao" class="form-control" rows="5" id="descServ" readonly="true"></textarea>
+                        <textarea ng-model="lance.leilao.descricao" class="form-control" rows="5" id="descServ" readonly="true"></textarea>
                     </div>
                 </div>
             </div>
@@ -140,7 +126,7 @@
                         <label for="end_rua">
                             Endereço
                         </label>
-                        <input type="text" ng-model="leilao.endereco" class="form-control" id="end_rua" readonly="true"/>
+                        <input type="text" ng-model="lance.leilao.endereco" class="form-control" id="end_rua" readonly="true"/>
                     </div>
                     <!--
                     <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -190,44 +176,9 @@
                 </div>
             </div>
         </form>
-        <div class="row" ng-hide="campoLance">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-                <button type="button" ng-click="setInfoLance()"class="btn btn-success"><span class="glyphicon glyphicon-bitcoin"></span> Dar um lance</button>
+                <button type="button" ng-click="deletar(value)" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-erase"></span> EXCLUIR</button>
             </div>
-        </div>
-        <div class="row" ng-show="campoLance" >
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="LanceController">
-                <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <form role="form" method="POST">
-
-                        <label for="valor_lance">
-                            Informe o valor do Lance
-                        </label>
-                        <input type="text" ng-model="lance.valor" class="form-control" id="valor_lance" placeholder="Ex.: 300,00"/>
-
-                        <label for="interessado_lance">
-                            Interessado
-                        </label>
-                        <input type="text" ng-model="lance.interessado" class="form-control" id="interessado_lance"/>
-
-
-                        <label for="interessado_lance">
-                            Data e Hora do Lance
-                        </label>
-                        <input type="text" ng-model="lance.dataHora" class="form-control" id="interessado_lance"/>
-
-                    </form>
-
-
-
-
-                </div>
-
-                <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-                <button type="button" ng-click="cadastrarLance(lance, leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span> Salvar Lance</button>
-            </div>
-        </div>
-        <!-- ng-click="salvarEdicao()" -->
     </div>
 </div>
