Criação do botão encerrar

--- a/client/views/leiloes-leiloes.html
+++ b/client/views/leiloes-leiloes.html
@@ -41,6 +41,9 @@
                         <button type="button" ng-click="setInfo(value)" class="btn btn-sm btn-primary" alt="Editar" title="Editar">
                             <span class="glyphicon glyphicon-plus-sign"></span> Informações
                         </button>
+                        <button type="button" ng-click="encerrar(leilao.id)" class="btn btn-sm btn-primary" alt="Editar" title="Editar">
+                            <span class="glyphicon glyphicon-bell"></span> Encerrar
+                        </button>
                     </th>
                 </tr>
             </tbody>
