--- a/client/views/sobre.html
+++ b/client/views/sobre.html
@@ -1,4 +1,7 @@
 <h1 id="msg">Sistema de Leilão de Serviços</h1>
-<h3 id="msg">Trabalho acadêmico desenvolvido para a cadeira de Projeto de Desenvolvimento ADS 2016/1</h3>
+<h3 id="msg">Trabalho acadêmico desenvolvido para a cadeira de Projeto em Desenvolvimento ADS 2016/1</h3>
 <h1 id="msg">Desenvolvido Pelos Alunos</h1>
-<h3 id="msg">Allisson | Eduardo | Gabriel | Gilberto | Rafael</h3>
+<h3 id="msg">Allisson Dedigo</h3>
+<h3 id="msg">Eduardo Souza</h3>
+<h3 id="msg">Gabriel Schaidhauer</h3>
+<h3 id="msg">Rafael Dorneles</h3>
