--- a/client/views/perfil-novo.html
+++ b/client/views/perfil-novo.html
@@ -2,7 +2,7 @@
 <!-- Cabeçalho da Janela -->
 <div class="row" id="cabPag">
     <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-        <h1 style="text-align: center">Novo Usuario</h1>
+        <h1 style="text-align: center">Cadastro de Pessoa Física</h1>
     </div>
 </div>
 
@@ -12,7 +12,7 @@
         <form role="form" method="POST">
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <label for="pessoa">
                             Pessoa <br>
                         </label>
@@ -21,7 +21,7 @@
                             <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
                         </div>
                     </div>
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <label for="nome">
                             Nome
                         </label>
@@ -29,48 +29,45 @@
                     </div>
                 </div>
             </div>
-            
-            
+
+
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="cpf">
                             CPF
                         </label>
-                        <input type="text" ng-model="pessoa.cpf" class="form-control" id="cpf"/>
+                        <input type="text" ng-model="pessoa.cpf" mask="999.999.999-99" clean="true" class="form-control" id="cpf" placeholder="Ex. 999.999.999-99"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="dataNascimento">
                             Data de Nascimento
                         </label>
-                        <input type="text" ng-model="pessoa.dataNascimento" class="form-control" id="dataNascimento"/>
+                        <input type="text" ng-model="pessoa.dataNascimento" mask="99/99/9999" clean="true" class="form-control" id="dataNascimento" placeholder="Ex. 29/06/2016"/>
                     </div>
-                </div>
-            </div>
-            
-             <div class="form-group">
-                <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="email">
                             Email
                         </label>
-                        <input type="text" ng-model="pessoa.email" class="form-control" id="email"/>
+                        <input type="text" ng-model="pessoa.email" class="form-control" id="email" placeholder="Ex. exemplo@exemplo.com.br"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="telefones">
                             Telefone
                         </label>
-                        <input type="text" ng-model="pessoa.telefones" class="form-control" id="telefones"/>
+                        <input type="text" ng-model="pessoa.telefones" mask="(99) 9999-9999" clean="true" class="form-control" id="telefones" placeholder="Ex. (99)9999-9999"/>
                     </div>
+
                 </div>
             </div>
+
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="username">
                             Username
                         </label>
-                        <input type="text" ng-model="pessoa.username" class="form-control" id="username"/>
+                        <input type="text" ng-model="pessoa.username" class="form-control" id="username" placeholder="Ex. Nunes"/>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="senha">
@@ -78,7 +75,7 @@
                         </label>
                         <input type="password" ng-model="pessoa.senha" class="form-control" id="senha"/>
                     </div>
-                    
+
                 </div>
             </div>
             <!-- Botões -->
