--- a/client/views/perfil.html
+++ b/client/views/perfil.html
@@ -10,7 +10,7 @@
         <form role="form" method="POST" >
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <label for="pessoa">
                             Pessoa <br>
                         </label>
@@ -19,7 +19,7 @@
                             <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
                         </div>
                     </div>
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <label for="nome">
                             Nome
                         </label>
@@ -28,49 +28,50 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                    <label for="cpf">
+                        CPF
+                    </label>
+                    <input type="text" ng-model="lista.cpf" mask="999.999.999-99" clean="true" class="form-control" id="cpf"/>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                    <label for="nascimento">
+                        Data de Nascimento
+                    </label>
+                    <input type="text" ng-model="lista.DataNascimento" mask="99/99/9999" clean="true" class="form-control" id="nascimento"/>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                    <label for="telefone">
+                        Telefone
+                    </label>
+                    <input type="text" ng-model="lista.telefones" mask="(99) 9999-9999" clean="true" class="form-control" id="telefone"/>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                    <label for="email">
+                        email
+                    </label>
+                    <input type="text" ng-model="lista.email" class="form-control" id="email"/>
+                </div>
+            </div>
+
             <div class="form-group">
-                 <div class="row">
+                <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="username">
                             Username
                         </label>
                         <input type="text" ng-model="lista.username" class="form-control" id="username"/>
                     </div>
-                    
+
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="senha">
                             Senha
                         </label>
                         <input type="password" ng-model="lista.senha" class="form-control" id="senha"/>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="email">
-                            email
-                        </label>
-                        <input type="text" ng-model="lista.email" class="form-control" id="email"/>
-                    </div>
                 </div>
-                <div class="row">
-                    
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="cpf">
-                            CPF
-                        </label>
-                        <input type="text" ng-model="lista.cpf" class="form-control" id="cpf"/>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="nascimento">
-                            Data de Nascimento
-                        </label>
-                        <input type="text" ng-model="lista.DataNascimento" class="form-control" id="nascimento"/>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="telefone">
-                            Telefone
-                        </label>
-                        <input type="text" ng-model="lista.telefones" class="form-control" id="telefone"/>
-                    </div>
-                </div>
+
             </div>
             <!---
             <div class="form-group">
