--- a/client/views/perfil-novo.html
+++ b/client/views/perfil-novo.html
@@ -75,6 +75,15 @@
                         </label>
                         <input type="password" ng-model="pessoa.senha" class="form-control" id="senha"/>
                     </div>
+                     <div class="row">
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Confirmação senha
+                        </label>
+                        <input type="password" ng-model="pessoa.confirmaSenha" class="form-control" id="confirmaSenha" placeholder="Repita sua senha"/>
+                    </div>
+                </div>
+            </div>
 
                 </div>
             </div>
