Ajuste nas sessões e no login

--- a/client/views/logon/cadastro.html
+++ b/client/views/logon/cadastro.html
@@ -15,7 +15,7 @@
                             Pessoa <br>
                         </label>
                         <div>
-                            <input type="radio" name="op" id="op1" onclick="location.href = '#/cadastro'"> Física 
+                            <input type="radio" name="op" id="op1" checked="true" onclick="location.href = '#/cadastro'"> Física
                             <input type="radio" name="op" id="op2" onclick="location.href = '#/juridica-novo'"> Jurídica
                         </div>
                     </div>
