--- a/client/views/perfil-juridica.html
+++ b/client/views/perfil-juridica.html
@@ -15,8 +15,8 @@
                             Fisico / Júridico <br>
                         </label>
                         <div>
-                            <input type="radio" name="op" id="op1" onclick="location.href = '#/perfil'"> Física 
-                            <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica'"> Jurídica
+                            <input type="radio" name="op" id="op1" onclick="location.href = '#/perfil'"> Física
+                            <input type="radio" name="op" id="op2" checked onclick="location.href = '#/perfil-juridica'"> Jurídica
                         </div>
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
