--- a/client/views/perfil-juridica-novo.html
+++ b/client/views/perfil-juridica-novo.html
@@ -18,7 +18,7 @@
                         </label>
                         <div>
                             <input type="radio" name="op" id="op1" onclick="location.href = '#/perfil-novo'"> Física 
-                            <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
+                            <input type="radio" name="op" id="op2" checked onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
@@ -91,7 +91,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <button type="button" ng-click="cadastrar(pessoa)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span>Salvar</button>
-                        <a class="btn btn-danger" href="#/leiloes-abertos" role="button"><span class="glyphicon glyphicon-menu-left"></span>Cancelar</a>
+                        <a class="btn btn-danger" href="#/" role="button"><span class="glyphicon glyphicon-menu-left"></span>Cancelar</a>
                     </div>
                 </div>
             </div>
