--- a/client/views/perfil.html
+++ b/client/views/perfil.html
@@ -15,7 +15,7 @@
                             Pessoa <br>
                         </label>
                         <div>
-                            <input type="radio" name="op" id="op1" onclick="location.href = '#/perfil'"> Física 
+                            <input type="radio" name="op" id="op1" checked onclick="location.href = '#/perfil'"> Física
                             <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
                         </div>
                     </div>
@@ -73,76 +73,6 @@
                 </div>
 
             </div>
-            <!---
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="endereco">
-                            Endereço
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="endereco"/>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="numero">
-                            Número
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="numero"/>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="complemento">
-                            Complemento
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="complemento"/>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="cep">
-                            CEP
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="cep"/>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="bairro">
-                            Bairro
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="bairro" />
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="cidade">
-                            Cidade
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="cidade" />
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="estado">
-                            Estado
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="estado" />
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="referencia">
-                            Ponto de Referência
-                        </label>
-                        <input type="text" ng-model="" class="form-control" id="referencia" />
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <label for="infoadi">
-                            Informções Adcionais
-                        </label>
-                        <textarea ng-model="" class="form-control" rows="5" id="infoadi"></textarea>
-                    </div>
-                </div>
-            </div>
-            -->
         </form>
 
         <div class="row">
