logoff e mascaras no leilao

--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -10,7 +10,7 @@
         <form style="padding-top: 10px;">
             <div class="form-inline">
                 <input type="text" class="form-control" ng-model="pesquisa" />
-                <a class="btn btn-default" href="#/leilao-novo" role="button"><span class="glyphicon glyphicon-pencil"></span> Novo...</a>
+                <a ng-hide="!showMenu" class="btn btn-default" href="#/leilao-novo" role="button"><span class="glyphicon glyphicon-pencil"></span> Novo...</a>
             </div>
         </form>		
     </div>
