--- a/client/views/leilao-novo.html
+++ b/client/views/leilao-novo.html
@@ -29,43 +29,28 @@
                         <label for="data_inic">
                             Data de Inicio
                         </label>
-                        <input type="text" ng-model="leilao.dataHoraInicio" class="form-control" id="data_inic" data-mask="00/00/0000" placeholder="Ex.: XX/XX/XXXX"/>                        
+                        <input type="text" ng-model="leilao.dataHoraInicio" class="form-control" id="data_inic" data-mask="99/99/9999 99:99:99" placeholder="Ex.: XX/XX/XXXX XX:XX:XX"/>
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_exec">
-                            Hora da Execução
-                        </label>
-                        <input type="text" ng-model="leilao.hora_exec" class="form-control" id="hora_exec" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="data_exec">
                             Data da Execução
                         </label>
 
-                        <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" id="data_exec" placeholder="Ex.: XX/XX/XXXX"/>  
+                        <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" data-mask="99/99/9999 99:99:99" id="data_exec" placeholder="Ex.: XX/XX/XXXX XX:XX:XX/>
 
 
 
 
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_exec">
-                            Hora da Execução
-                        </label>
-                        <input type="text" ng-model="leilao.hora_exec" class="form-control" id="hora_exec" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="data_limite">
                             Data Limite dos Lances
                         </label>
-                        <input type="text"  ng-model="leilao.dataHoraFinal" class="form-control" id="data_limite" placeholder="Ex.: XX/XX/XXXX"/>                        
+                        <input type="text"  ng-model="leilao.dataHoraFinal" data-mask="99/99/9999 99:99:99" class="form-control" id="data_limite" placeholder="Ex.: XX/XX/XXXX XX:XX:XX"/>
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_limite">
-                            Hora Limite dos Lances
-                        </label>
-                        <input type="text" ng-model="leilao.hora_limite" class="form-control" id="hora_limite" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                 </div>
             </div>
 
