Ajuste, String não encerrada corretamente

--- a/client/views/leilao-novo.html
+++ b/client/views/leilao-novo.html
@@ -37,7 +37,7 @@
                             Data da Execução
                         </label>
 
-                        <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" data-mask="99/99/9999 99:99:99" id="data_exec" placeholder="Ex.: XX/XX/XXXX XX:XX:XX/>
+                        <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" data-mask="99/99/9999 99:99:99" id="data_exec" placeholder="Ex.: XX/XX/XXXX XX:XX:XX"/>
 
 
 
